<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:id="@+id/bedLcl"
    android:padding="10dp"
    android:background="#000"
    android:alpha="0.5"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="#FFF"
        android:textSize="25sp"
        android:gravity="center"
        android:textStyle="bold"
        android:paddingBottom="20dp"
        android:text="@string/string_text_view"
        android:layout_weight="1.8"/>
    <LinearLayout
        android:id="@+id/layout_upgrade_event"
        android:weightSum="2"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
    <RadioButton
        android:id="@+id/radio_event_upgrade"
        android:buttonTint="#25A8D8"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="0.2"/>
      <TextView
          android:paddingLeft="10dp"
          android:paddingBottom="10dp"
          android:layout_height="wrap_content"
          android:layout_width="0dp"
          android:textColor="#FFF"
          android:text="@string/string_descrition_upgrade_event"
          android:layout_weight="1.8"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_upgrade_map"
        android:weightSum="2"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <RadioButton
            android:id="@+id/radio_map_upgrade"
            android:buttonTint="#25A8D8"
            android:layout_height="20dp"
            android:layout_width="0dp"
            android:layout_weight="0.2"/>
        <TextView
            android:paddingLeft="10dp"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:textColor="#FFF"
            android:text="@string/string_descrition_upgrade_map"
            android:layout_weight="1.8"/>
    </LinearLayout>
    <LinearLayout
        android:weightSum="2"
        android:id="@+id/layout_upgrade_widhlist"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <RadioButton
            android:id="@+id/radio_wishlist_upgrade"
            android:buttonTint="#25A8D8"
            android:layout_height="20dp"
            android:layout_width="0dp"
            android:layout_weight="0.2"/>
        <TextView
            android:paddingLeft="10dp"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:textColor="#FFF"
            android:text="@string/string_descrition_upgrade_wishlsit"
            android:layout_weight="1.8"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_upgrade_allfeature"
        android:weightSum="2"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <RadioButton
            android:id="@+id/radio_all_upgrade"
            android:buttonTint="#25A8D8"
            android:layout_height="20dp"
            android:layout_width="0dp"
            android:layout_weight="0.2"/>
        <TextView
            android:paddingLeft="10dp"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:textColor="#FFF"
            android:text="@string/string_descrition_upgrade_allfeature"
            android:layout_weight="1.8"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_string_not_now"
        android:weightSum="2"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <RadioButton
            android:id="@+id/radio_donothing"
            android:buttonTint="#25A8D8"
            android:layout_height="20dp"
            android:layout_width="0dp"
            android:layout_weight="0.2"/>
        <TextView
            android:paddingLeft="10dp"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:textColor="#FFF"
            android:text="@string/string_not_rignt_now"
            android:layout_weight="1.8"/>
    </LinearLayout>
</LinearLayout>
</ScrollView>