<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_festival_event_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/splashbg"
    tools:context="com.demo.festivalapp.festivalapp.Activities.FestivalEventListActivity">
<TextView
    android:id="@+id/festival_name"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:text="Festival Name"
    android:textSize="25sp"
    android:textColor="#FFF"/>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="Event Schedule"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textColor="#FFF"/>
    <LinearLayout
        android:id="@+id/layout_paid_users"
        android:background="@drawable/my_custom_background_linear"
        android:visibility="visible"
        android:layout_marginTop="5dp"
        android:paddingBottom="5dp"
        android:weightSum="4"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <LinearLayout
            android:background="@drawable/bg_filter"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:weightSum="2"
            android:layout_weight="1">
        <TextView
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:textColor="#FFF"
            android:text="@string/str_filter_txt"/>
            <ImageView
                android:src="@drawable/icon_arrow"
                android:layout_height="20dp"
                android:padding="3dp"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_weight="0.5"/>
        </LinearLayout>
        <LinearLayout
            android:background="@drawable/my_custom_background_linear"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:id="@+id/filter_time"
            android:layout_weight="1">
            <TextView
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColor="#FFF"
                android:text="@string/str_filter_time"/>
        </LinearLayout>
        <LinearLayout
            android:background="@drawable/my_custom_background_linear"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:id="@+id/filter_stage"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tv_stage"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColor="#FFF"
                android:text="@string/str_filter_stage"/>
        </LinearLayout>
        <LinearLayout
            android:background="@drawable/my_custom_background_linear"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:id="@+id/filter_artist"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tv_artist"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColor="#FFF"
                android:text="@string/str_filter_artist"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:visibility="visible"
        android:paddingTop="5dp"
        android:layout_marginBottom="5dp"
        android:paddingBottom="5dp"
        android:background="#a93f3f"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="LC=Loose Cannon (parental Advisory)"
            android:textAllCaps="true"
            android:textSize="13sp"
            android:textColor="#FFF"/>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressbar_event_list"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_centerInParent="true"
        android:indeterminateDrawable="@drawable/circular_spinner" >
    </ProgressBar>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical" />
    <LinearLayout
        android:id="@+id/layout_error"
        android:visibility="gone"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_width="match_parent">
        <ImageView
            android:src="@drawable/ic_error"
            android:layout_height="80dp"
            android:layout_width="80dp"/>
        <TextView
            android:id="@+id/txt_error_homepage"
            android:textColor="#FFF"
            android:gravity="center"
            android:padding="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="Error Occured"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>
        <Button
            android:id="@+id/btn_retry"
            android:text="@string/string_retry"
            android:padding="5dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
    </LinearLayout>
</LinearLayout>
