<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_all_wishlist"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/splashbg"
    tools:context="com.demo.festivalapp.festivalapp.Activities.AllWishlist">
   <LinearLayout
       android:weightSum="2"
       android:layout_marginBottom="15dp"
       android:orientation="horizontal"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <LinearLayout
           android:layout_weight="1"
           android:layout_width="0dp"
           android:layout_height="wrap_content">
       <TextView
           android:textColor="#FFF"
           android:text="Wish List"
           android:textSize="30sp"
           android:layout_height="wrap_content"
           android:layout_width="match_parent"/>
       </LinearLayout>
       <LinearLayout
           android:background="@drawable/my_custom_background_linear"
           android:layout_weight="1"
           android:weightSum="2"
           android:id="@+id/btn_addnewwish"
           android:layout_gravity="center"
           android:layout_width="0dp"
           android:layout_height="wrap_content">
           <ImageView
               android:src="@drawable/icon_camera"
               android:layout_height="20dp"
               android:layout_width="0dp"
               android:layout_weight="1"/>
           <TextView
               android:padding="5dp"
               android:textColor="#FFF"
               android:text="NewWish"
               android:textSize="10sp"
               android:layout_height="wrap_content"
               android:layout_width="0dp"
               android:layout_weight="1"/>
       </LinearLayout>
       </LinearLayout>
    <LinearLayout
        android:weightSum="4"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_width="match_parent">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:id="@+id/filter_clothing"
            android:background="@drawable/my_custom_background_linear"
            android:layout_weight="1">
            <TextView
                android:padding="4.5dp"
                android:gravity="center"
                android:textColor="#FFF"
                android:text="@string/str_filter_clothing"
                android:paddingLeft="20dp"
                android:paddingBottom="10dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>
        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:id="@+id/filter_jewelery"
            android:background="@drawable/my_custom_background_linear"
            android:layout_weight="1">
            <TextView
                android:gravity="center"
                android:textColor="#FFF"
                android:id="@+id/title_event"
                android:text="@string/str_filter_jewlwery"
                android:padding="4.5dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>
        </LinearLayout>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:id="@+id/filter_armory"
            android:background="@drawable/my_custom_background_linear"
            android:layout_weight="1">
            <TextView
                android:gravity="center"
                android:padding="4.5dp"
                android:textColor="#FFF"
                android:text="@string/str_filter_armory"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>
        </LinearLayout>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:id="@+id/filter_trinket"
            android:background="@drawable/my_custom_background_linear"
            android:layout_weight="1">
            <TextView
                android:gravity="center"
                android:padding="4.5dp"
                android:textColor="#FFF"
                android:text="@string/str_filter_trinket"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>
        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_wish_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:scrollbars="vertical" />
        </LinearLayout>
</LinearLayout>
